# ecommerce

./: db.sqlite3  pyproject.toml  todo.md
auctions/: admin.py  forms.py  models.py  urls.py  views.py
auctions/migrations/: 0001_initial.py  0002_auto_20210106_1445.py  0002_auto_20210107_1442.py  0002_bid_comment_listing.py  0003_auto_20210107_1451.py  0003_listing_is_active.py  0004_auto_20210107_1849.py  0004_user_watchlist.py  0005_auto_20210106_1639.py  0005_auto_20210107_1850.py  0006_auto_20210107_1850.py  0007_comment_listing.py  0008_comment_title.py  0009_comment_date.py  0010_auto_20210108_1140.py  0011_auto_20210108_1142.py  0012_auto_20210108_1212.py  0013_auto_20210108_1241.py  0014_auto_20210109_2151.py  0015_auto_20210109_2217.py  0016_auto_20210109_2235.py  0017_auto_20210110_2016.py
auctions/static/auctions/: styles.css
auctions/templates/auctions/: categories.html  category.html  create.html  index.html  layout.html  listing.html  listing_card.html  login.html  watchlist.html
commerce/: settings.py
